hash: Support pyblake2 & pysha3 fallbacks

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,33 @@
 [tox]
 envlist = py27,py34,py35,py36,pypy,pypy3
 
+[testenv:py27]
+deps =
+	pyblake2
+	pysha3
+
+[testenv:py34]
+deps =
+	pyblake2
+	pysha3
+
+[testenv:py35]
+deps =
+	pyblake2
+	pysha3
+
+[testenv:py36]
+# blake2 & sha3 are built-in
+deps =
+
+[testenv:pypy]
+deps =
+	pyblake2
+	pysha3
+
+[testenv:pypy3]
+# note: pyblake2, pysha3 don't build
+deps =
+
 [testenv]
 commands = python -m unittest discover -v
