tox: Enable collecting code coverage

--- a/tox.ini
+++ b/tox.ini
@@ -1,33 +1,44 @@
 [tox]
-envlist = py27,py34,py35,py36,pypy,pypy3
+envlist = begin,py27,py34,py35,py36,pypy,pypy3
+
+[testenv:begin]
+deps =
+	coverage
+commands = coverage erase
 
 [testenv:py27]
 deps =
+	coverage
 	pyblake2
 	pysha3
 
 [testenv:py34]
 deps =
+	coverage
 	pyblake2
 	pysha3
 
 [testenv:py35]
 deps =
+	coverage
 	pyblake2
 	pysha3
 
 [testenv:py36]
 # blake2 & sha3 are built-in
 deps =
+	coverage
 
 [testenv:pypy]
 deps =
+	coverage
 	pyblake2
 	pysha3
 
 [testenv:pypy3]
 # note: pyblake2, pysha3 don't build
 deps =
+	coverage
 
 [testenv]
-commands = python -m unittest discover -v
+commands = coverage run -m unittest discover -v
