tox.ini: Run coverage in parallel-friendly mode

--- a/tox.ini
+++ b/tox.ini
@@ -41,4 +41,4 @@ deps =
 	coverage
 
 [testenv]
-commands = coverage run -m unittest discover -v
+commands = coverage run -p -m unittest discover -v
