tox.ini: Combine coverage results

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = begin,py27,py34,py35,py36,pypy,pypy3
+envlist = begin,py27,py34,py35,py36,pypy,pypy3,end
 
 [testenv:begin]
 deps =
@@ -42,3 +42,8 @@ deps =
 
 [testenv]
 commands = coverage run -p -m unittest discover -v
+
+[testenv:end]
+deps =
+	coverage
+commands = coverage combine
