tox: Include pyflakes run

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,10 @@ envlist = begin,py27,py34,py35,py36,pypy,pypy3,end
 [testenv:begin]
 deps =
 	coverage
-commands = coverage erase
+	pyflakes
+commands =
+	coverage erase
+	pyflakes gemato tests
 
 [testenv:py27]
 deps =
