tox: Skip unnecessary sdist

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,7 @@
 [tox]
 envlist = begin,py27,py34,py35,py36,pypy,pypy3,end
+# we operate on sources anyway
+skipsdist = True
 
 [testenv:begin]
 deps =
