tox: Generate coverage report while at it

--- a/tox.ini
+++ b/tox.ini
@@ -51,4 +51,7 @@ commands = coverage run -p -m unittest discover -v
 [testenv:end]
 deps =
 	coverage
-commands = coverage combine
+commands =
+	coverage combine
+	coverage html
+	coverage report
