Provide compression abstraction

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,8 @@ commands =
 
 [testenv:py27]
 deps =
+	backports.lzma
+	bz2file
 	coverage
 	pyblake2
 	pysha3
@@ -36,6 +38,8 @@ deps =
 
 [testenv:pypy]
 deps =
+	backports.lzma
+	bz2file
 	coverage
 	pyblake2
 	pysha3
