tox: Add an extra environment with minimal set of deps

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = begin,py27,py34,py35,py36,pypy,pypy3,end
+envlist = begin,py27,py34,py35,py36,pypy,pypy3,nodeps,end
 # we operate on sources anyway
 skipsdist = True
 
@@ -46,6 +46,11 @@ deps =
 
 [testenv:pypy3]
 # note: pyblake2, pysha3 don't build
+deps =
+	coverage
+
+[testenv:nodeps]
+basepython = python2.7
 deps =
 	coverage
 
