Support building wheels

--- a/tox.ini
+++ b/tox.ini
@@ -60,7 +60,15 @@ commands = coverage run -p -m unittest discover -v
 [testenv:end]
 deps =
 	coverage
+	wheel
 commands =
 	coverage combine
 	coverage html
 	coverage report
+	python setup.py sdist bdist_wheel
+
+[testenv:upload]
+deps =
+	wheel
+commands =
+	python setup.py sdist bdist_wheel upload
