compression: Prevent using incompatible 'lzma' module from pyliblzma
Try importing the 'lzma' module only in Python 3.3+, that is versions
known to have it built-in. This way, we can prevent accidentally
importing incompatible module using the same name, e.g. pyliblzma.

Bug: https://bugs.gentoo.org/643254

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = begin,py27,py34,py35,py36,pypy,pypy3,nodeps,end
+envlist = begin,py27,py34,py35,py36,pypy,pypy3,incompatible-lzma,nodeps,end
 # we operate on sources anyway
 skipsdist = True
 
@@ -53,6 +53,12 @@ deps =
 basepython = python2.7
 deps =
 	coverage
+
+[testenv:incompatible-lzma]
+basepython = python2.7
+deps =
+	coverage
+	pyliblzma
 
 [testenv]
 commands = coverage run -p -m unittest discover -v
