tox: Fix collecting coverage for multiprocessing

--- a/tox.ini
+++ b/tox.ini
@@ -61,7 +61,7 @@ deps =
 	pyliblzma
 
 [testenv]
-commands = coverage run -p -m unittest discover -v
+commands = coverage run --concurrency=multiprocessing -p -m unittest discover -v
 
 [testenv:end]
 deps =
