tox: Simplify dependency specifications

--- a/tox.ini
+++ b/tox.ini
@@ -11,56 +11,20 @@ commands =
 	coverage erase
 	pyflakes gemato tests
 
-[testenv:py27]
-deps =
-	backports.lzma
-	bz2file
-	coverage
-	pyblake2
-	pysha3
-
-[testenv:py34]
-deps =
-	coverage
-	pyblake2
-	pysha3
-
-[testenv:py35]
-deps =
-	coverage
-	pyblake2
-	pysha3
-
-[testenv:py36]
-# blake2 & sha3 are built-in
-deps =
-	coverage
-
-[testenv:pypy]
-deps =
-	backports.lzma!=0.0.9
-	bz2file
-	coverage
-	pyblake2
-	pysha3
-
-[testenv:pypy3]
-# note: pyblake2, pysha3 don't build
-deps =
-	coverage
+[testenv:incompatible-lzma]
+basepython = python2.7
 
 [testenv:nodeps]
 basepython = python2.7
-deps =
-	coverage
-
-[testenv:incompatible-lzma]
-basepython = python2.7
-deps =
-	coverage
-	pyliblzma
 
 [testenv]
+deps =
+	coverage
+	py27,py34,py35,pypy: pyblake2
+	py27,py34,py35,pypy: pysha3
+	py27,pypy: backports.lzma!=0.0.9
+	py27,pypy: bz2file
+	incompatible-lzma: pyliblzma
 commands = coverage run --concurrency=multiprocessing -p -m unittest discover -v
 
 [testenv:end]
