tox: Use pytest to run tests

--- a/tox.ini
+++ b/tox.ini
@@ -20,12 +20,13 @@ basepython = python2.7
 [testenv]
 deps =
 	coverage
+	pytest
 	py27,py34,py35,pypy: pyblake2
 	py27,py34,py35,pypy: pysha3
 	py27,pypy: backports.lzma!=0.0.9
 	py27,pypy: bz2file
 	incompatible-lzma: pyliblzma
-commands = coverage run --concurrency=multiprocessing -p -m unittest discover -v
+commands = coverage run --concurrency=multiprocessing -p -m pytest -vv {posargs}
 
 [testenv:end]
 deps =
