tox: Use pytest-xdist for concurrent testing

--- a/tox.ini
+++ b/tox.ini
@@ -21,12 +21,14 @@ basepython = python2.7
 deps =
 	coverage
 	pytest
+	pytest-xdist
 	py27,py34,py35,pypy: pyblake2
 	py27,py34,py35,pypy: pysha3
 	py27,pypy: backports.lzma!=0.0.9
 	py27,pypy: bz2file
 	incompatible-lzma: pyliblzma
-commands = coverage run --concurrency=multiprocessing -p -m pytest -vv {posargs}
+commands =
+	coverage run --concurrency=multiprocessing -p -m pytest -vv -n auto {posargs}
 
 [testenv:end]
 deps =
