--- a/tox.ini
+++ b/tox.ini
@@ -19,8 +19,8 @@ basepython = python2.7
 
 [testenv]
 deps =
-	coverage
 	pytest
+	pytest-cov
 	pytest-xdist
 	py27,py34,py35,pypy: pyblake2
 	py27,py34,py35,pypy: pysha3
@@ -28,14 +28,13 @@ deps =
 	py27,pypy: bz2file
 	incompatible-lzma: pyliblzma
 commands =
-	coverage run --concurrency=multiprocessing -p -m pytest -vv -n auto {posargs}
+	pytest --cov=gemato --cov=tests --cov-append -vv -n auto {posargs}
 
 [testenv:end]
 deps =
 	coverage
 	wheel
 commands =
-	coverage combine
 	coverage html
 	coverage report
 	python setup.py sdist bdist_wheel
