--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = begin,py27,py34,py35,py36,pypy,pypy3,incompatible-lzma,nodeps,end
+envlist = begin,py27,py34,py35,py36,py37,pypy,pypy3,incompatible-lzma,nodeps,end
 # we operate on sources anyway
 skipsdist = True
 
