tox: Install pyblake2 for pypy3 & incompatible-lzma scenarios
pyblake2 was excluded from pypy3 because it failed to build.  However,
upstream has fixed the immediate issue.  pysha3 is still broken, though.

Include it for incompatible-lzma as well in order to solve test failures
due to modern layout requiring BLAKE2B.

Signed-off-by: Michał Górny <mgorny@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,7 @@ deps =
 	coverage
 	pytest
 	pytest-xdist
-	py27,py34,py35,pypy: pyblake2
+	py27,py34,py35,pypy,pypy3,incompatible-lzma: pyblake2
 	py27,py34,py35,pypy: pysha3
 	py27,pypy: backports.lzma!=0.0.9
 	py27,pypy: bz2file
