--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = begin,py27,py34,py35,py36,py37,pypy,pypy3,incompatible-lzma,nodeps,end
+envlist = begin,py27,py34,py35,py36,py37,pypy,pypy3,incompatible-lzma,end
 # we operate on sources anyway
 skipsdist = True
 
@@ -12,9 +12,6 @@ commands =
 	pyflakes gemato tests
 
 [testenv:incompatible-lzma]
-basepython = python2.7
-
-[testenv:nodeps]
 basepython = python2.7
 
 [testenv]
