tox: Add codecov upload env
Signed-off-by: Michał Górny <mgorny@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -42,3 +42,12 @@ deps =
 	wheel
 commands =
 	python setup.py sdist bdist_wheel upload
+
+[testenv:codecov]
+basepython = python3
+deps =
+	codecov
+passenv =
+	CODECOV_TOKEN
+commands =
+	codecov
