tox: Skip missing interpreters
Signed-off-by: Michał Górny <mgorny@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
 envlist = begin,py27,py34,py35,py36,py37,py38,pypy,pypy3,incompatible-lzma,end
+skip_missing_interpreters = True
 # we operate on sources anyway
 skipsdist = True
 
