tox: Switch to pytest-cov, coverage runner is broken
Signed-off-by: Michał Górny <mgorny@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -1,16 +1,14 @@
 [tox]
-envlist = begin,py27,py34,py35,py36,py37,py38,pypy,pypy3,incompatible-lzma,end
+envlist = qa,py27,py34,py35,py36,py37,py38,pypy,pypy3,incompatible-lzma
 skip_missing_interpreters = True
 # we operate on sources anyway
 skipsdist = True
 
-[testenv:begin]
+[testenv:qa]
 deps =
-	coverage
 	pyflakes
 commands =
-	coverage erase
-	pyflakes gemato tests
+	pyflakes {posargs:gemato tests}
 
 [testenv:incompatible-lzma]
 basepython = python2.7
@@ -19,6 +17,7 @@ basepython = python2.7
 deps =
 	coverage
 	pytest
+	pytest-cov
 	pytest-xdist
 	py27,py34,py35,pypy,pypy3,incompatible-lzma: pyblake2
 	py27,py34,py35,pypy: pysha3
@@ -26,17 +25,7 @@ deps =
 	py27,pypy: bz2file
 	incompatible-lzma: pyliblzma
 commands =
-	coverage run --concurrency=multiprocessing -p -m pytest -vv -n auto {posargs}
-
-[testenv:end]
-deps =
-	coverage
-	wheel
-commands =
-	coverage combine
-	coverage html
-	coverage report
-	python setup.py sdist bdist_wheel
+	pytest -vv --cov=gemato --cov-config=.coveragerc -n auto {posargs}
 
 [testenv:upload]
 deps =
