Enable testing on py3.9
Signed-off-by: Michał Górny <mgorny@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = qa,py27,py34,py35,py36,py37,py38,pypy,pypy3,incompatible-lzma
+envlist = qa,py27,py34,py35,py36,py37,py38,py39,pypy,pypy3,incompatible-lzma
 skip_missing_interpreters = True
 # we operate on sources anyway
 skipsdist = True
