tox.ini: Use twine for uploading
Signed-off-by: Michał Górny <mgorny@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -29,9 +29,11 @@ commands =
 
 [testenv:upload]
 deps =
+	twine
 	wheel
 commands =
-	python setup.py sdist bdist_wheel upload
+	python setup.py sdist bdist_wheel
+	twine upload dist/*
 
 [testenv:codecov]
 basepython = python3
