Stop testing Python 2
Signed-off-by: Michał Górny <mgorny@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = qa,py27,py34,py35,py36,py37,py38,py39,pypy,pypy3,incompatible-lzma
+envlist = qa,py34,py35,py36,py37,py38,py39,pypy3
 skip_missing_interpreters = True
 # we operate on sources anyway
 skipsdist = True
@@ -10,20 +10,14 @@ deps =
 commands =
 	pyflakes {posargs:gemato tests}
 
-[testenv:incompatible-lzma]
-basepython = python2.7
-
 [testenv]
 deps =
 	coverage
 	pytest
 	pytest-cov
 	pytest-xdist
-	py27,py34,py35,pypy,pypy3,incompatible-lzma: pyblake2
-	py27,py34,py35,pypy: pysha3
-	py27,pypy: backports.lzma!=0.0.9
-	py27,pypy: bz2file
-	incompatible-lzma: pyliblzma
+	py34,py35,pypy3: pyblake2
+	py34,py35: pysha3
 commands =
 	pytest -vv --cov=gemato --cov-config=.coveragerc -n auto {posargs}
 
