tox.ini: pypy3 shouldn't need pyblake2 anymore
Signed-off-by: Michał Górny <mgorny@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ deps =
 	pytest
 	pytest-cov
 	pytest-xdist
-	py34,py35,pypy3: pyblake2
+	py34,py35: pyblake2
 	py34,py35: pysha3
 commands =
 	pytest -vv --cov=gemato --cov-config=.coveragerc -n auto {posargs}
