--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = qa,py34,py35,py36,py37,py38,py39,pypy3
+envlist = qa,py36,py37,py38,py39,pypy3
 skip_missing_interpreters = True
 # we operate on sources anyway
 skipsdist = True
@@ -16,8 +16,6 @@ deps =
 	pytest
 	pytest-cov
 	pytest-xdist
-	py34,py35: pyblake2
-	py34,py35: pysha3
 commands =
 	pytest -vv --cov=gemato --cov-config=.coveragerc -n auto {posargs}
 
