openpgp: Reimplement WKD support via requests
Signed-off-by: Michał Górny <mgorny@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -16,6 +16,8 @@ deps =
 	pytest
 	pytest-cov
 	pytest-xdist
+	requests
+	responses
 commands =
 	pytest -vv --cov=gemato --cov-config=.coveragerc -n auto {posargs}
 
