tox.ini: Tests on crippled envs as well
Signed-off-by: Michał Górny <mgorny@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = qa,py36,py37,py38,py39,pypy3
+envlist = qa,py36,py37,py38,py39,pypy3,py3-nogpg,py3-norequests-noresponses,py3-noresponses
 skip_missing_interpreters = True
 # we operate on sources anyway
 skipsdist = True
@@ -16,8 +16,10 @@ deps =
 	pytest
 	pytest-cov
 	pytest-xdist
-	requests
-	responses
+	!norequests: requests
+	!noresponses: responses
+setenv =
+	nogpg: GNUPG = wrong-command
 commands =
 	pytest -vv --cov=gemato --cov-config=.coveragerc -n auto {posargs}
 
