Reformat gemato code and fix PEP8 compliance
Signed-off-by: Michał Górny <mgorny@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -6,9 +6,11 @@ skipsdist = True
 
 [testenv:qa]
 deps =
+	pycodestyle
 	pyflakes
 commands =
 	pyflakes {posargs:gemato tests}
+	pycodestyle {posargs:gemato}
 
 [testenv]
 deps =
