Fix remaining PEP8 issues and extend PEP8 testing to tests
Signed-off-by: Michał Górny <mgorny@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ deps =
 	pyflakes
 commands =
 	pyflakes {posargs:gemato tests}
-	pycodestyle {posargs:gemato}
+	pycodestyle {posargs:gemato tests}
 
 [testenv]
 deps =
