--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = qa,py36,py37,py38,py39,pypy3,py3-nogpg,py3-norequests-noresponses,py3-noresponses
+envlist = qa,py36,py37,py38,py39,pypy3,py3-nogpg,py3-nopgpy,py3-norequests-noresponses,py3-noresponses
 skip_missing_interpreters = True
 # we operate on sources anyway
 skipsdist = True
@@ -18,6 +18,7 @@ deps =
 	pytest >= 5
 	pytest-cov
 	pytest-xdist
+	!nopgpy: pgpy
 	!norequests: requests
 	!noresponses: responses
 setenv =
