--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,16 @@ classifiers = [
 ]
 requires-python = ">=3.6"
 
+[project.optional-dependencies]
+pretty-log = ["rich"]
+wkd-refresh = ["requests"]
+test = ["pytest"]
+test-full = [
+    "pytest",
+    "requests",
+    "responses",
+]
+
 [project.urls]
 Homepage = "https://github.com/mgorny/gemato/"
 
