--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ classifiers = [
 ]
 requires-python = ">=3.6"
 
+[project.optional-dependencies]
+pretty-log = ["rich"]
+
 [project.urls]
 Homepage = "https://github.com/mgorny/gemato/"
 
