--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,13 @@ requires-python = ">=3.6"
 
 [project.optional-dependencies]
 pretty-log = ["rich"]
+wkd-refresh = ["requests"]
+test = ["pytest"]
+test-full = [
+    "pytest",
+    "requests",
+    "responses",
+]
 
 [project.urls]
 Homepage = "https://github.com/mgorny/gemato/"
