Update tox install rules for flit
Signed-off-by: Michał Górny <mgorny@gentoo.org>

--- a/tox.ini
+++ b/tox.ini
@@ -26,11 +26,12 @@ commands =
 	pytest -vv --cov=gemato --cov-config=.coveragerc -n auto {posargs}
 
 [testenv:upload]
+skip_install = True
 deps =
+	build
 	twine
-	wheel
 commands =
-	python setup.py sdist bdist_wheel
+	python -m build -s -w
 	twine upload dist/*
 
 [testenv:codecov]
