--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,7 +4,7 @@ jobs:
   build:
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11.0-alpha - 3.11", "pypy-3.8", "pypy-3.9"]
+        python-version: ["3.9", "3.10", "3.11", "pypy-3.9"]
         variant: ["", "-norequests-noresponses", "-noresponses"]
         gpg: ["no-gpg", "vanilla-gpg"]
       fail-fast: false
