--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = qa,py38,py39,py310,pypy3,py3-nogpg,py3-norequests-noresponses,py3-noresponses
+envlist = qa,py{39,310,311},pypy3,py3-nogpg,py3-norequests-noresponses,py3-noresponses
 skip_missing_interpreters = True
 # we operate on sources anyway
 skipsdist = True
